// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardDatePicker renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
        >
          <label
            class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-10"
            data-shrink="true"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-11"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-37 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-fullWidth-46 MuiInput-fullWidth-32 MuiInputBase-formControl-38 MuiInput-formControl-26 MuiInputBase-adornedEnd-42"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-47 MuiInput-input-33 MuiInputBase-inputAdornedEnd-55"
              name="date"
              required=""
              value="2019-10-18"
            />
            <div
              class="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
            >
              <button
                class="MuiButtonBase-root-73 MuiIconButton-root-64"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-72"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-76"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-87"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
      >
        <label
          class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiInputLabel-shrink-14 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-10"
          data-shrink="true"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-11"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-37 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-fullWidth-46 MuiInput-fullWidth-32 MuiInputBase-formControl-38 MuiInput-formControl-26 MuiInputBase-adornedEnd-42"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-47 MuiInput-input-33 MuiInputBase-inputAdornedEnd-55"
            name="date"
            required=""
            value="2019-10-18"
          />
          <div
            class="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
          >
            <button
              class="MuiButtonBase-root-73 MuiIconButton-root-64"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-72"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-76"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-87"
              />
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`KeyboardDatePicker requires a date value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
        >
          <label
            class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-error-21 MuiInputLabel-error-9 MuiFormLabel-required-23 MuiInputLabel-required-10"
            data-shrink="false"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-11 MuiFormLabel-error-21 MuiInputLabel-error-9"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-37 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-error-43 MuiInput-error-30 MuiInputBase-fullWidth-46 MuiInput-fullWidth-32 MuiInputBase-formControl-38 MuiInput-formControl-26 MuiInputBase-adornedEnd-42"
          >
            <input
              aria-invalid="true"
              class="MuiInputBase-input-47 MuiInput-input-33 MuiInputBase-inputAdornedEnd-55"
              name="date"
              required=""
              value=""
            />
            <div
              class="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
            >
              <button
                class="MuiButtonBase-root-73 MuiIconButton-root-64"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-72"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-76"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-87"
                />
              </button>
            </div>
          </div>
          <p
            class="MuiFormHelperText-root-97 MuiFormHelperText-error-98 MuiFormHelperText-required-104"
          >
            something for testing
          </p>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-2 MuiTextField-root-1 MuiFormControl-marginNormal-3 MuiFormControl-fullWidth-5"
      >
        <label
          class="MuiFormLabel-root-18 MuiInputLabel-root-6 MuiInputLabel-formControl-12 MuiInputLabel-animated-15 MuiFormLabel-error-21 MuiInputLabel-error-9 MuiFormLabel-required-23 MuiInputLabel-required-10"
          data-shrink="false"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-11 MuiFormLabel-error-21 MuiInputLabel-error-9"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-37 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-error-43 MuiInput-error-30 MuiInputBase-fullWidth-46 MuiInput-fullWidth-32 MuiInputBase-formControl-38 MuiInput-formControl-26 MuiInputBase-adornedEnd-42"
        >
          <input
            aria-invalid="true"
            class="MuiInputBase-input-47 MuiInput-input-33 MuiInputBase-inputAdornedEnd-55"
            name="date"
            required=""
            value=""
          />
          <div
            class="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
          >
            <button
              class="MuiButtonBase-root-73 MuiIconButton-root-64"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-72"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-76"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-87"
              />
            </button>
          </div>
        </div>
        <p
          class="MuiFormHelperText-root-97 MuiFormHelperText-error-98 MuiFormHelperText-required-104"
        >
          something for testing
        </p>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
